--- a/views/newteam.erb
+++ b/views/newteam.erb
@@ -5,10 +5,11 @@
   <title>Basketball Team Signup</title>
  </head>
  <body>
+   <h1>Create a Basketball Team!</h1>
    <form class="" action="index.html" method="post">
-     
+     <input type="text" name="Team Name" value="">
+
+
    </form>
  </body>
 </html>
-
-
