--- a/views/newteam.erb
+++ b/views/newteam.erb
@@ -8,6 +8,7 @@
    <h1>Create a Basketball Team!</h1>
    <form class="" action="index.html" method="post">
      <input type="text" name="Team Name" value="">
+     <input type="Submit" name="" value="">
 
 
    </form>
