--- a/views/newteam.erb
+++ b/views/newteam.erb
@@ -7,7 +7,7 @@
  <body>
    <h1>Create a Basketball Team!</h1>
    <form class="" action="index.html" method="post">
-     <input type="text" name="Team Name" value="">
+     <input type="text" name="name" value="">
      <input type="Submit" name="" value="">
 
 
