Automatically backed up by Learn

--- a/views/newteam.erb
+++ b/views/newteam.erb
@@ -8,6 +8,12 @@
    <h1>Create a Basketball Team!</h1>
    <form class="" action="index.html" method="post">
      <input type="text" name="name" value="">
+     <input type="text" name="coach" value="">
+     <input type="text" name="pg" value="">
+     <input type="text" name="sg" value="">
+     <input type="text" name="sf" value="">
+     <input type="text" name="pf" value="">
+     <input type="text" name="c" value="">
      <input type="Submit" name="" value="">
 
 
