--- a/views/newteam.erb
+++ b/views/newteam.erb
@@ -14,7 +14,7 @@
      <input type="text" name="sf" value="">
      <input type="text" name="pf" value="">
      <input type="text" name="c" value="">
-     <input type="Submit" name="" id="Submit" value="">
+     <input type="Button" name="" id="Submit" value="">
 
 
    </form>
