Automatically backed up by Learn

--- a/views/newteam.erb
+++ b/views/newteam.erb
@@ -7,14 +7,14 @@
  <body>
    <h1>Create a Basketball Team!</h1>
    <form class="" action="index.html" method="post">
-     <input type="text" name="name" value="">
-     <input type="text" name="coach" value="">
-     <input type="text" name="pg" value="">
-     <input type="text" name="sg" value="">
-     <input type="text" name="sf" value="">
-     <input type="text" name="pf" value="">
-     <input type="text" name="c" value="">
-     <input type="Button" name="" id="Submit" value="">
+     <input type="text" name="name" value="Team Name">
+     <input type="text" name="coach" value="Coach">
+     <input type="text" name="pg" value="Point Guard">
+     <input type="text" name="sg" value="Shooting Guard">
+     <input type="text" name="sf" value="Small Forward">
+     <input type="text" name="pf" value="Power Forward">
+     <input type="text" name="c" value="Center">
+     <input id="Submit" type="Button" name="" value="Submit">
 
 
    </form>
