Automatically backed up by Learn

--- a/views/newteam.erb
+++ b/views/newteam.erb
@@ -6,7 +6,7 @@
  </head>
  <body>
    <h1>Create a Basketball Team!</h1>
-   <form class="" action="index.html" method="post">
+   <form method="post" action="/team" >
      <input type="text" name="name" value="Team Name">
      <input type="text" name="coach" value="Coach">
      <input type="text" name="pg" value="Point Guard">
