--- a/views/newteam.erb
+++ b/views/newteam.erb
@@ -14,7 +14,7 @@
      <input type="text" name="sf" value="Small Forward">
      <input type="text" name="pf" value="Power Forward">
      <input type="text" name="c" value="Center">
-     <input type="Submit" id="Submit">
+     <input type="submit" id="Submit">
 
 
    </form>
