--- a/views/newteam.erb
+++ b/views/newteam.erb
@@ -7,7 +7,7 @@
  <body>
    <h1>Create a Basketball Team!</h1>
    <form method="post" action="/team" >
-     <input type="text" name="name" value="Team Name:">
+     <label>Team Name: <input type="text" name="name" value="Team Name">
      <input type="text" name="coach" value="Coach">
      <input type="text" name="pg" value="Point Guard">
      <input type="text" name="sg" value="Shooting Guard">
