--- a/views/newteam.erb
+++ b/views/newteam.erb
@@ -8,12 +8,12 @@
    <h1>Create a Basketball Team!</h1>
    <form method="post" action="/team" >
      <label>Team Name: <input type="text" name="name" value="Team Name"></label><br/>
-     <input type="text" name="coach" value="Coach">
-     <input type="text" name="pg" value="Point Guard">
-     <input type="text" name="sg" value="Shooting Guard">
-     <input type="text" name="sf" value="Small Forward">
-     <input type="text" name="pf" value="Power Forward">
-     <input type="text" name="c" value="Center">
+     <label>Coach: <input type="text" name="coach" value="Coach"></label><br/>
+     <label>Point Guard: <input type="text" name="pg" value="Point Guard"></label><br/>
+     <label>Shooting Guard: <input type="text" name="sg" value="Shooting Guard"></label><br/>
+     <label>Small Forward: <input type="text" name="sf" value="Small Forward"></label><br/>
+     <label>Power Forward: <input type="text" name="pf" value="Power Forward"></label><br/>
+     <label>Center <input type="text" name="c" value="Center"></label><br/>
      <input type="submit" id="Submit">
 
 
