--- a/views/newteam.erb
+++ b/views/newteam.erb
@@ -7,13 +7,13 @@
  <body>
    <h1>Create a Basketball Team!</h1>
    <form method="post" action="/team" >
-     <label>Team Name: <input type="text" name="name" value="Team Name"></label><br/>
-     <label>Coach: <input type="text" name="coach" value="Coach"></label><br/>
-     <label>Point Guard: <input type="text" name="pg" value="Point Guard"></label><br/>
-     <label>Shooting Guard: <input type="text" name="sg" value="Shooting Guard"></label><br/>
-     <label>Small Forward: <input type="text" name="sf" value="Small Forward"></label><br/>
-     <label>Power Forward: <input type="text" name="pf" value="Power Forward"></label><br/>
-     <label>Center <input type="text" name="c" value="Center"></label><br/>
+     <label>Team Name: <input type="text" name="name" value=""></label><br/>
+     <label>Coach: <input type="text" name="coach" value=""></label><br/>
+     <label>Point Guard: <input type="text" name="pg" value=""></label><br/>
+     <label>Shooting Guard: <input type="text" name="sg" value=""></label><br/>
+     <label>Small Forward: <input type="text" name="sf" value=""></label><br/>
+     <label>Power Forward: <input type="text" name="pf" value=""></label><br/>
+     <label>Center: <input type="text" name="c" value=""></label><br/>
      <input type="submit" id="Submit">
 
 
